--- a/app/views/messages/_like_button.html.erb
+++ b/app/views/messages/_like_button.html.erb
@@ -4,13 +4,13 @@
   <% like = message.likes.find_by(user: current_user) %>
 
   <% if like.present? %>
-    <%= button_to team_topic_message_like_path(message.team, message.topic, message, like), method: :delete, data: { turbo_method: :delete }, class: 'p-2 rounded-full flex items-center gap-1 hover:bg-slate-200/60 dark:hover:bg-slate-700/40 text-blue-500 transition duration-200 ease-in-out' do %>
+    <%= button_to team_topic_message_like_path(message.team, message.topic, message, like), method: :delete, data: { turbo_method: :delete }, class: 'p-2 rounded-full flex items-center gap-1 hover:bg-blue-100/60 dark:hover:bg-blue-900/30 text-blue-500 transition duration-200 ease-in-out' do %>
       <%= inline_svg_tag 'icons/like-filled.svg', class: 'size-4 shrink-0 motion-safe:pulse-hover-animation' %>
       <span class="sr-only">Unlike message</span>
       <span class="text-xs font-bold text-blue-500"><%= message.like_count %></span>
     <% end %>
   <% else %>
-    <%= button_to team_topic_message_likes_path(message.team, message.topic, message), method: :post, data: { turbo_method: :post }, class: 'p-2 rounded-full flex items-center gap-1 hover:bg-slate-200/60 dark:hover:bg-slate-700/40 hover:text-blue-500 transition duration-200 ease-in-out' do %>
+    <%= button_to team_topic_message_likes_path(message.team, message.topic, message), method: :post, data: { turbo_method: :post }, class: 'p-2 rounded-full flex items-center gap-1 hover:bg-blue-100/60 dark:hover:bg-blue-900/30 hover:text-blue-500 transition duration-200 ease-in-out' do %>
       <%= inline_svg_tag 'icons/like.svg', class: 'size-4 shrink-0' %>
       <span class="sr-only">Like message</span>
 
