--- a/app/views/shared/_user_photo.html.erb
+++ b/app/views/shared/_user_photo.html.erb
@@ -54,7 +54,7 @@
 } %>
 
 <% icon_color_class = icon_color_class_map[icon_background] %>
-<% avatar_check = user.avatar.attached? && user.avatar&.blob&.persisted? && user.avatar&.variable? %>
+<% avatar_check = user&.avatar&.attached? && user&.avatar&.blob&.persisted? && user&.avatar&.variable? %>
 
 <% unless image_only %>
   <% svg_fallback = capture do %>
@@ -70,7 +70,7 @@
   <% rescue ActiveStorage::FileNotFoundError, StandardError => e %>
     <%= svg_fallback %>
   <% end %>
-<% elsif user.avatar_url %>
+<% elsif user&.avatar_url %>
   <%= image_tag user.avatar_url, class: "#{size_classes} object-cover #{image_classes}", **image_options %>
 <% elsif image_only %>
   <%= image_tag '', class: "#{size_classes} object-cover #{image_classes}", **image_options if current_page?(edit_user_registration_path) %>
