--- a/app/views/teams/forms/_edit_settings.html.erb
+++ b/app/views/teams/forms/_edit_settings.html.erb
@@ -115,7 +115,7 @@
         </div>
         <div>
           <%= settings_form.label :include_saturday, 'Include Saturdays', class: 'select-none text-slate-700 dark:text-slate-300' %>
-          <p class="my-1 help-text">Check this box to allow Saturdays to reset your team member's run streaks.</p>
+          <p class="my-1 help-text">Allow Saturdays to reset your team member's run streaks.</p>
         </div>
       </div>
 
@@ -126,7 +126,7 @@
         </div>
         <div>
           <%= settings_form.label :include_sunday, 'Include Sundays', class: 'select-none text-slate-700 dark:text-slate-300' %>
-          <p class="my-1 help-text">Check this box to allow Sundays to reset your team member's run streaks.</p>
+          <p class="my-1 help-text">Allow Sundays to reset your team member's run streaks.</p>
         </div>
       </div>
     </div>
@@ -143,7 +143,7 @@
       </div>
       <div>
         <%= settings_form.label :include_self, 'Include self', class: 'select-none text-slate-700 dark:text-slate-300' %>
-        <p class="my-1 help-text">Check this box to include your own runs in the team&#8217;s stats.</p>
+        <p class="my-1 help-text">Include your own runs in the team&#8217;s stats.</p>
       </div>
     </div>
 
