--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -4,8 +4,8 @@
     data-notifications-hidden-class="notification--hidden"
     data-notifications-visible-class="notification--visible"
     data-notifications-exit-class="notification--exit"
-    class="fixed sm:right-8 w-full max-w-[80vw] mx-[10vw] sm:max-w-sm sm:mx-0 space-y-1 z-50 flex flex-col items-center sm:items-end"
-    style="top: env(safe-area-inset-top, 2rem);"
+    class="fixed sm:top-8 sm:right-8 w-full max-w-[80vw] mx-[10vw] sm:max-w-sm sm:mx-0 space-y-1 z-50 flex flex-col items-center sm:items-end"
+    style="@media (min-width: 640px) { top: env(safe-area-inset-top, 2rem); }"
   >
     <% if notice %>
       <div
