--- a/app/views/messages/_reply_button.html.erb
+++ b/app/views/messages/_reply_button.html.erb
@@ -1,22 +1,42 @@
 <% pinned = local_assigns.fetch(:pinned, false) %>
+<% details_view = local_assigns.fetch(:details_view, false) %>
+
+<% topic = message.topic %>
+<% team = topic.team %>
+<% reply = message.replies.find_by(user: current_user) %>
 
 <div id="<%= pinned ? 'pinned_' : '' %><%= dom_id(message, :replies) %>">
-  <% reply = message.replies.find_by(user: current_user) %>
 
+  <% if details_view %>
   <% if reply.present? %>
-    <button type="button" data-action="click->reply-message#reply" data-message-id="<%= message.id %>" data-message-user-name="<%= message.user == current_user ? 'yourself' : message.author_name %>" data-message-content="<%= truncate(message.content, length: 100) %>" class="p-2 rounded-full flex items-center gap-1 hover:bg-emerald-100/60 dark:hover:bg-emerald-900/30 text-emerald-500 transition duration-200 ease-in-out">
-      <%= inline_svg_tag 'icons/reply-filled.svg', class: 'size-4.5 -my-px shrink-0' %>
-      <span class="sr-only">Reply to message</span>
-      <span class="text-xs font-bold text-emerald-500"><%= message.reply_count %></span>
-    </button>
+    <%= link_to team_topic_messages_path(team, topic, parent_id: message.id), data: { turbo: false }, class: 'p-2 rounded-full flex items-center gap-1 hover:bg-emerald-100/60 dark:hover:bg-emerald-900/30 text-emerald-500 transition duration-200 ease-in-out' do %>
+        <%= inline_svg_tag 'icons/reply-filled.svg', class: 'size-4.5 -my-px shrink-0' %>
+        <span class="text-xs font-bold text-emerald-500"><%= number_with_delimiter message.reply_count %></span>
+    <% end %>
   <% else %>
-    <button type="button" data-action="click->reply-message#reply" data-message-id="<%= message.id %>" data-message-user-name="<%= message.user == current_user ? 'yourself' : message.author_name %>" data-message-content="<%= truncate(message.content, length: 100) %>" class="p-2 rounded-full flex items-center gap-1 hover:bg-emerald-100/60 dark:hover:bg-emerald-900/30 hover:text-emerald-500 transition duration-200 ease-in-out">
-      <%= inline_svg_tag 'icons/reply.svg', class: 'size-4.5 -my-px shrink-0' %>
-      <span class="sr-only">Reply to message</span>
+    <%= link_to team_topic_messages_path(team, topic, parent_id: message.id), data: { turbo: false }, class: 'p-2 rounded-full flex items-center gap-1 hover:bg-emerald-100/60 dark:hover:bg-emerald-900/30 hover:text-emerald-500 transition duration-200 ease-in-out' do %>
+        <%= inline_svg_tag 'icons/reply.svg', class: 'size-4.5 -my-px shrink-0' %>
+        <% if message.reply_count.positive? %>
+          <span class="text-xs font-bold"><%= number_with_delimiter message.reply_count %></span>
+        <% end %>
+    <% end %>
+  <% end %>
+  <% else %>
+    <% if reply.present? %>
+      <button type="button" data-action="click->reply-message#reply" data-message-id="<%= message.id %>" data-message-user-name="<%= message.user == current_user ? 'yourself' : message.author_name %>" data-message-content="<%= truncate(message.content, length: 100) %>" class="p-2 rounded-full flex items-center gap-1 hover:bg-emerald-100/60 dark:hover:bg-emerald-900/30 text-emerald-500 transition duration-200 ease-in-out">
+        <%= inline_svg_tag 'icons/reply-filled.svg', class: 'size-4.5 -my-px shrink-0' %>
+        <span class="sr-only">Reply to message</span>
+        <span class="text-xs font-bold text-emerald-500"><%= number_with_delimiter message.reply_count %></span>
+      </button>
+    <% else %>
+      <button type="button" data-action="click->reply-message#reply" data-message-id="<%= message.id %>" data-message-user-name="<%= message.user == current_user ? 'yourself' : message.author_name %>" data-message-content="<%= truncate(message.content, length: 100) %>" class="p-2 rounded-full flex items-center gap-1 hover:bg-emerald-100/60 dark:hover:bg-emerald-900/30 hover:text-emerald-500 transition duration-200 ease-in-out">
+        <%= inline_svg_tag 'icons/reply.svg', class: 'size-4.5 -my-px shrink-0' %>
+        <span class="sr-only">Reply to message</span>
 
-      <% if message.reply_count.positive? %>
-        <span class="text-xs font-bold"><%= message.reply_count %></span>
-      <% end %>
-    </button>
+        <% if message.reply_count.positive? %>
+          <span class="text-xs font-bold"><%= number_with_delimiter message.reply_count %></span>
+        <% end %>
+      </button>
+    <% end %>
   <% end %>
 </div>
