--- a/app/views/runs/_turbo_run.html.erb
+++ b/app/views/runs/_turbo_run.html.erb
@@ -1,3 +1,3 @@
 <%= turbo_frame_tag "turbo_run_#{run.id}" do %>
-  <%= render run, turbo_frame: true %>
+  <%= render run, turbo_frame: true, details_view: true %>
 <% end %>
